--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -114,13 +114,187 @@
     "    \n",
     "print(\"删除掉素数之后的数之和^_^\",sum(a))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d324647c",
+   "metadata": {},
+   "source": [
+    "### Q2\n",
+    "一个数如果恰好等于它的因子之和，这个数就称为“完数”。例如 6=1+2+3，编程找出\n",
+    "10000 以内的所有完数，并保存到列表 list_1 中。\n",
+    "\n",
+    "一个 X 位数如果其各位数字 X 次方和等于该数本身，这个数就称为“水仙花数”。例如\n",
+    "对于三位数 153=1^3+5^3+3^3，编程找出 10000 以内的所有“水仙花数”，并保存到列表list_2 中。\n",
+    "\n",
+    "将 list_1 和 list_2 中的元素合并成列表 list_3，并对其中元素按由小到大次序排列（使用任意一种排序算法完成这一操作，不能通过简单调用 sort 这一类函数完成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "963101c4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T10:51:58.856766Z",
+     "start_time": "2022-07-06T10:51:53.981381Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list_1 = []\n",
+    "for i in range(1,10001):\n",
+    "    temp = [] #存储该数的所有因子\n",
+    "    for j in range(1,i):\n",
+    "        if i%j == 0:\n",
+    "            temp.append(j)\n",
+    "        \n",
+    "    if i == sum(temp):\n",
+    "        list_1.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f053efde",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T10:51:58.887503Z",
+     "start_time": "2022-07-06T10:51:58.858579Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[6, 28, 496, 8128]"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a9dc6358",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T10:51:58.950506Z",
+     "start_time": "2022-07-06T10:51:58.890501Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list_2 = []\n",
+    "for i in range(1,10001):\n",
+    "    temp = []\n",
+    "    for k in range(len(str(i))):\n",
+    "        temp.append(int(str(i)[k]))\n",
+    "    #if sum(temp**len(str(i))) == i:\n",
+    "    if sum(map(lambda x:x**len(str(i)),temp)) == i:\n",
+    "        list_2.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d9bca891",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T10:51:58.966292Z",
+     "start_time": "2022-07-06T10:51:58.953328Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407, 1634, 8208, 9474]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "74f69499",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T10:51:58.982250Z",
+     "start_time": "2022-07-06T10:51:58.968288Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "排序前： [6, 28, 496, 8128, 1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407, 1634, 8208, 9474]\n",
+      "排序后： [1, 2, 3, 4, 5, 6, 6, 7, 8, 9, 28, 153, 370, 371, 407, 496, 1634, 8128, 8208, 9474]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 冒泡排序\n",
+    "\n",
+    "list_3 = list_1+list_2\n",
+    "print(\"排序前：\", list_3)\n",
+    "\n",
+    "while True:\n",
+    "    cap = 0\n",
+    "    for i in range(len(list_3)-1):\n",
+    "        if list_3[i]>list_3[i+1]:\n",
+    "            temp1 = list_3[i]\n",
+    "            list_3[i] = list_3[i+1]\n",
+    "            list_3[i+1] = temp1\n",
+    "            cap += 1\n",
+    "    if cap == 0:# 当未出现次序变换，则说明排序已完成，退出循环\n",
+    "        break\n",
+    "\n",
+    "print(\"排序后：\", list_3)\n",
+    "# sot = []\n",
+    "# if len(list_3)>0:\n",
+    "#     temp1 = min(list_3)\n",
+    "#     list_3.remove(temp1)\n",
+    "#     sot.append(temp1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "456a90c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fed0995a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T11:00:10.181624Z",
+     "start_time": "2022-07-06T11:00:09.850507Z"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-433fd628",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (Desktop)"
   },
   "language_info": {
    "codemirror_mode": {
