--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -29,8 +29,8 @@
    "id": "b12f81a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-29T13:00:09.378928Z",
-     "start_time": "2022-06-29T13:00:09.355849Z"
+     "end_time": "2022-08-05T07:38:26.446954Z",
+     "start_time": "2022-08-05T07:38:26.418649Z"
     },
     "pycharm": {
      "name": "#%%\n"
@@ -60,8 +60,8 @@
    "id": "af74bfa5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-29T13:00:09.403305Z",
-     "start_time": "2022-06-29T13:00:09.383883Z"
+     "end_time": "2022-08-05T07:38:26.462115Z",
+     "start_time": "2022-08-05T07:38:26.450925Z"
     }
    },
    "outputs": [
@@ -94,8 +94,8 @@
    "id": "61bbd617",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-29T13:00:09.419277Z",
-     "start_time": "2022-06-29T13:00:09.408291Z"
+     "end_time": "2022-08-05T07:38:26.477817Z",
+     "start_time": "2022-08-05T07:38:26.465847Z"
     }
    },
    "outputs": [
@@ -136,8 +136,8 @@
    "id": "963101c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T10:51:58.856766Z",
-     "start_time": "2022-07-06T10:51:53.981381Z"
+     "end_time": "2022-08-05T07:38:38.338133Z",
+     "start_time": "2022-08-05T07:38:26.483800Z"
     }
    },
    "outputs": [],
@@ -159,14 +159,16 @@
    "id": "f053efde",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T10:51:58.887503Z",
-     "start_time": "2022-07-06T10:51:58.858579Z"
+     "end_time": "2022-08-05T07:38:38.385679Z",
+     "start_time": "2022-08-05T07:38:38.344093Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[6, 28, 496, 8128]"
+      "text/plain": [
+       "[6, 28, 496, 8128]"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -183,8 +185,8 @@
    "id": "a9dc6358",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T10:51:58.950506Z",
-     "start_time": "2022-07-06T10:51:58.890501Z"
+     "end_time": "2022-08-05T07:38:38.538547Z",
+     "start_time": "2022-08-05T07:38:38.393322Z"
     }
    },
    "outputs": [],
@@ -205,14 +207,16 @@
    "id": "d9bca891",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T10:51:58.966292Z",
-     "start_time": "2022-07-06T10:51:58.953328Z"
+     "end_time": "2022-08-05T07:38:38.554121Z",
+     "start_time": "2022-08-05T07:38:38.543390Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407, 1634, 8208, 9474]"
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407, 1634, 8208, 9474]"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -229,8 +233,8 @@
    "id": "74f69499",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T10:51:58.982250Z",
-     "start_time": "2022-07-06T10:51:58.968288Z"
+     "end_time": "2022-08-05T07:38:38.594560Z",
+     "start_time": "2022-08-05T07:38:38.564463Z"
     }
    },
    "outputs": [
@@ -253,48 +257,112 @@
     "    cap = 0\n",
     "    for i in range(len(list_3)-1):\n",
     "        if list_3[i]>list_3[i+1]:\n",
-    "            temp1 = list_3[i]\n",
-    "            list_3[i] = list_3[i+1]\n",
-    "            list_3[i+1] = temp1\n",
+    "            list_3[i], list_3[i+1] = list_3[i+1], list_3[i]\n",
     "            cap += 1\n",
     "    if cap == 0:# 当未出现次序变换，则说明排序已完成，退出循环\n",
     "        break\n",
     "\n",
-    "print(\"排序后：\", list_3)\n",
-    "# sot = []\n",
-    "# if len(list_3)>0:\n",
-    "#     temp1 = min(list_3)\n",
-    "#     list_3.remove(temp1)\n",
-    "#     sot.append(temp1)\n"
+    "print(\"排序后：\", list_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0bf054",
+   "metadata": {},
+   "source": [
+    "### Q3\n",
+    "找出 100-200 之间的所有非素数，保存到 list_1 中\n",
+    "\n",
+    "对 list_1 中的每个数求倒数并求和\n",
+    "\n",
+    "删除 list_1 中所有能被 2 整除的数并输"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "456a90c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fed0995a",
+   "execution_count": 9,
+   "id": "0f3df7c8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T11:00:10.181624Z",
-     "start_time": "2022-07-06T11:00:09.850507Z"
+     "end_time": "2022-08-05T07:38:38.647592Z",
+     "start_time": "2022-08-05T07:38:38.601713Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "倒数和为: 0.5494365566021238\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[105,\n",
+       " 111,\n",
+       " 115,\n",
+       " 117,\n",
+       " 119,\n",
+       " 121,\n",
+       " 123,\n",
+       " 125,\n",
+       " 129,\n",
+       " 133,\n",
+       " 135,\n",
+       " 141,\n",
+       " 143,\n",
+       " 145,\n",
+       " 147,\n",
+       " 153,\n",
+       " 155,\n",
+       " 159,\n",
+       " 161,\n",
+       " 165,\n",
+       " 169,\n",
+       " 171,\n",
+       " 175,\n",
+       " 177,\n",
+       " 183,\n",
+       " 185,\n",
+       " 187,\n",
+       " 189,\n",
+       " 195]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1 = []\n",
+    "# 找出100~200非素数\n",
+    "for i in range(100,200):\n",
+    "    time_ = 0\n",
+    "    for j in range(1,i):\n",
+    "        if i%j == 0:\n",
+    "            time_ += 1\n",
+    "    if time_ >= 2:\n",
+    "        list_1.append(i)\n",
+    "# 求倒数和\n",
+    "print(\"倒数和为:\",sum(list(map(lambda x:1/x,list_1))))\n",
+    "\n",
+    "# 找到被2整除的数\n",
+    "l_2 = []\n",
+    "for k in list_1:\n",
+    "    if k % 2 == 0:\n",
+    "        l_2.append(k)\n",
+    "        \n",
+    "[m for m in list_1 if m not in l_2]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-433fd628",
+   "display_name": "PyCharm (Desktop)",
    "language": "python",
-   "display_name": "PyCharm (Desktop)"
+   "name": "pycharm-433fd628"
   },
   "language_info": {
    "codemirror_mode": {
