--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -356,6 +356,47 @@
     "        \n",
     "[m for m in list_1 if m not in l_2]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "求 s=a+aa+aaa+aaaa+aaaaa 的值，其中 a 是一个数字，例如当 a=2 时，求 s，s（2）= 2+22+222+2222+22222"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "24690"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def s(a):\n",
+    "    sum_ = 0\n",
+    "    for i in range(1,6):\n",
+    "        sum_ += int(i*str(a))\n",
+    "    return sum_\n",
+    "\n",
+    "s(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
