--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -359,23 +359,31 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "求 s=a+aa+aaa+aaaa+aaaaa 的值，其中 a 是一个数字，例如当 a=2 时，求 s，s（2）= 2+22+222+2222+22222"
-   ],
+   "id": "6782cef5",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "求 s=a+aa+aaa+aaaa+aaaaa 的值，其中 a 是一个数字，例如当 a=2 时，求 s，s（2）= 2+22+222+2222+22222"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "ec202e10",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "24690"
+      "text/plain": [
+       "24690"
+      ]
      },
      "execution_count": 1,
      "metadata": {},
@@ -390,13 +398,48 @@
     "    return sum_\n",
     "\n",
     "s(2)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f61f9845",
+   "metadata": {},
+   "source": [
+    "求 s(n)=1+2!+3!+…+n!的和（要求用到列表)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1fa854f1",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "end_time": "2022-08-24T10:49:05.798923Z",
+     "start_time": "2022-08-24T10:49:05.777469Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def s(n):\n",
+    "    list_ = []\n",
+    "    temp = 1\n",
+    "    for i in range(1,n+1):\n",
+    "        temp = temp * i\n",
+    "        list_.append(temp)\n",
+    "    return sum(list_)\n",
+    "s(3)"
+   ]
   }
  ],
  "metadata": {
